@@ -4,7 +4,10 @@ karl package Changelog
 Unreleased
 ----------
 
-
+- When doing the text indexing on files, text data is now re-extracted from
+  files if the cached text is an empty string.  This allows for files
+  previously indexed when an external converter was unavailable to be properly
+  reindexed after the external converter is added to the system.
 
 3.71 (2011-09-01)
 -----------------
